# jupyterlab-research-assistant-wwc-copilot

./: .copier-answers.yml  .cursorignore  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE.md  USER_GUIDE.md  conftest.py  install.json  jest.config.js  package.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml  check-release.yml
binder/: README.md  postBuild  set_api_key.py
docs/: README.md  api-contract.md  architecture.mmd  code-analysis-report.md  developer-guide.md  getting-started.md  implementation-guide.md  implementation-status-report.md  jupyterlab-architecture.md  manual-testing-guide.md  master-plan.md  new-testing-guide.md  parallelization-plan.md  quick-reference.md  release-preparation.md  remaining-work-analysis.md  remaining-work-implementation-guide.md  stage-2-enhancements-implementation-guide.md  stage-2-implementation-guide.md  styling-improvement-plan.md  styling-principles.md  temp-How to Get Your JupyterLab Extension Listed.md  temp-demo-script.md  temp-parallelization-guide.md  temp-refactoring-opportunities.md  temp-stage-2-remaining-work.md
docs/troubleshooting/: dev_investigate_conflict_detection.md  dev_meta_analysis_sqrt_warnings.md
docs/wwc_copilot_styles/style/: index.css  research_library.css  synthesis_workbench.css
jupyter-config/server-config/: jupyterlab_research_assistant_wwc_copilot.json
jupyterlab_research_assistant_wwc_copilot/: __init__.py  routes.py
jupyterlab_research_assistant_wwc_copilot/database/: __init__.py  models.py
jupyterlab_research_assistant_wwc_copilot/services/: __init__.py  ai_extractor.py  conflict_detector.py  db_manager.py  export_formatter.py  extraction_schema.py  import_service.py  meta_analyzer.py  openalex.py  pdf_parser.py  semantic_scholar.py  visualizer.py  wwc_assessor.py
jupyterlab_research_assistant_wwc_copilot/tests/: __init__.py  test_conflict_detector.py  test_db_manager.py  test_export_formatter.py  test_export_routes.py  test_import_service.py  test_integration.py  test_meta_analyzer.py  test_openalex.py  test_pdf_parser.py  test_routes.py  test_semantic_scholar.py  test_semantic_scholar_transform.py  test_stage2_routes.py  test_visualizer.py  test_wwc_assessor.py  test_wwc_routes.py
schema/: plugin.json
scripts/: binder_add_test_papers.py  preload_nli_model.py  run_pytest.sh  test_add_papers_with_effect_sizes.py  verify_package_config.py
src/: api.ts  index.ts  index.tsx  request.ts
src/__tests__/: jupyterlab_research_assistant_wwc_copilot.spec.ts
src/utils/: api-response.ts  download.ts  events.ts  format.ts  hooks.ts  notifications.ts  paper.ts  retry.ts
src/utils/__tests__/: api-response.test.ts  download.test.ts  events.test.ts  format.test.ts  paper.test.ts
src/widgets/: BiasAssessmentView.tsx  ConflictView.tsx  DetailView.tsx  DiscoveryTab.tsx  ErrorDisplay.tsx  LibraryTab.tsx  LoadingState.tsx  MetaAnalysisView.tsx  PaperCard.tsx  ResearchLibraryPanel.tsx  SearchBar.tsx  SensitivityAnalysisView.tsx  SkeletonLoader.tsx  SubgroupAnalysisView.tsx  SynthesisWorkbench.tsx  Tabs.tsx  WWCCoPilot.tsx
style/: base.css  index.css
ui-tests/: README.md  jupyter_server_test_config.py  package.json
ui-tests/tests/: jupyterlab_research_assistant_wwc_copilot.spec.ts
